--- a/addressbook_selenium_tests/test-output/index.html
+++ b/addressbook_selenium_tests/test-output/index.html
@@ -48,7 +48,7 @@
               <ul>
                 <li>
                   <a href="#" class="navigator-link " panel-name="test-xml-Default_suite">
-                    <span>C:\Users\Наталья\AppData\Local\Temp\testng-eclipse--1652231481\testng-customsuite.xml</span>
+                    <span>C:\Users\Наталья\AppData\Local\Temp\testng-eclipse--303015521\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -134,28 +134,6 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.example.tests.GroupCreationTests</span>
-            </div> <!-- main-panel-header rounded-window-top -->
-            <div class="main-panel-content rounded-window-bottom">
-              <div class="method">
-                <div class="method-content">
-                  <a name="testEmptyGroupCreation">
-                  </a> <!-- testEmptyGroupCreation -->
-                  <span class="method-name">testEmptyGroupCreation</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="testNonEmptyGroupCreation">
-                  </a> <!-- testNonEmptyGroupCreation -->
-                  <span class="method-name">testNonEmptyGroupCreation</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-            </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-Default_suite-class-passed -->
-          <div class="suite-Default_suite-class-passed">
-            <div class="main-panel-header rounded-window-top">
-              <img src="passed.png"/>
               <span class="class-name">com.example.tests.AddressCreationTests</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
@@ -175,10 +153,32 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-Default_suite-class-passed -->
+          <div class="suite-Default_suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">com.example.tests.GroupCreationTests</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="testEmptyGroupCreation">
+                  </a> <!-- testEmptyGroupCreation -->
+                  <span class="method-name">testEmptyGroupCreation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="testNonEmptyGroupCreation">
+                  </a> <!-- testNonEmptyGroupCreation -->
+                  <span class="method-name">testNonEmptyGroupCreation</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Default_suite-class-passed -->
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\Наталья\AppData\Local\Temp\testng-eclipse--1652231481\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\Наталья\AppData\Local\Temp\testng-eclipse--303015521\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -188,12 +188,12 @@
   &lt;test verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.example.tests.GroupsMethods&quot;/&gt;
-      &lt;class name=&quot;com.example.tests.Data&quot;/&gt;
       &lt;class name=&quot;com.example.tests.AddressBookBaseMethods&quot;/&gt;
       &lt;class name=&quot;com.example.tests.AddressCreationTests&quot;/&gt;
-      &lt;class name=&quot;com.example.tests.AddressDate&quot;/&gt;
+      &lt;class name=&quot;com.example.tests.Date&quot;/&gt;
       &lt;class name=&quot;com.example.tests.AddressMethods&quot;/&gt;
       &lt;class name=&quot;com.example.tests.GroupCreationTests&quot;/&gt;
+      &lt;class name=&quot;com.example.tests.AddressData&quot;/&gt;
       &lt;class name=&quot;com.example.tests.GroupData&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
@@ -236,26 +236,26 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(4);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'testNonEmptyAddressCreation')
+data.setCell(0, 1, 'testEmptyAddressCreation')
 data.setCell(0, 2, 'com.example.tests.AddressCreationTests')
-data.setCell(0, 3, 5231);
+data.setCell(0, 3, 5568);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'testEmptyAddressCreation')
+data.setCell(1, 1, 'testNonEmptyAddressCreation')
 data.setCell(1, 2, 'com.example.tests.AddressCreationTests')
-data.setCell(1, 3, 4139);
+data.setCell(1, 3, 4877);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'testNonEmptyGroupCreation')
 data.setCell(2, 2, 'com.example.tests.GroupCreationTests')
-data.setCell(2, 3, 2930);
+data.setCell(2, 3, 2998);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'testEmptyGroupCreation')
 data.setCell(3, 2, 'com.example.tests.GroupCreationTests')
-data.setCell(3, 3, 2834);
+data.setCell(3, 3, 2939);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 15 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -283,7 +283,7 @@ return data;
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
             <div class="ignored-class-div">
-              <span class="ignored-class-name">com.example.tests.AddressCreationTests</span>
+              <span class="ignored-class-name">com.example.tests.AddressBookBaseMethods</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">setUp</span>
                 <br/>
@@ -317,39 +317,36 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.example.tests.AddressBookBaseMethods</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.example.tests.AddressCreationTests</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
-            </div> <!-- chronological-class -->
-            <div class="chronological-class">
-              <div class="chronological-class-name">com.example.tests.AddressCreationTests</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">testEmptyAddressCreation</span>
-                <span class="method-start">13732 ms</span>
+                <span class="method-start">13245 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testNonEmptyAddressCreation</span>
-                <span class="method-start">17873 ms</span>
+                <span class="method-start">18815 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.example.tests.GroupCreationTests</div> <!-- chronological-class-name -->
               <div class="test-method">
                 <span class="method-name">testEmptyGroupCreation</span>
-                <span class="method-start">23105 ms</span>
+                <span class="method-start">23700 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">testNonEmptyGroupCreation</span>
-                <span class="method-start">25957 ms</span>
+                <span class="method-start">26639 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.example.tests.AddressBookBaseMethods</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.example.tests.AddressCreationTests</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">28906 ms</span>
+                <span class="method-start">29639 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
